feat: change the site domain and the site title

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: siriniok@gmail.com
 description: >
   Notes on drinking code.
 baseurl: ""
-url: "https://siriniok.github.io"
+url: "http://siriniok.com"
 twitter_username: siriniok
 github_username:  siriniok
 
