Change the site name

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: A Bottle of Code
+title: Vladyslav Siriniok
 email: siriniok@gmail.com
 description: >
   Notes on drinking code.
 baseurl: ""
-url: "http://siriniok.com"
+url: "https://siriniok.me"
 twitter_username: siriniok
 github_username:  siriniok
 
