--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Vladyslav Siriniok
+title: A Bottle of Code
 email: siriniok@gmail.com
 description: >
   Notes on drinking code.
 baseurl: ""
-url: "https://siriniok.me"
+url: "http://siriniok.com"
 twitter_username: siriniok
 github_username:  siriniok
 
@@ -15,3 +15,4 @@ exclude:
 plugins:
   - octopress-debugger
   - jekyll-redirect-from
+  - jekyll-twitter-plugin
