--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: A Bottle of Code
+title: Vladyslav Siriniok
 email: siriniok@gmail.com
 description: >
-  Notes on drinking code.
+  A blog on tech and science by Vladyslav Siriniok
 url: "http://siriniok.com"
 permalink: pretty
 twitter_username: siriniok
