Change public email

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Vladyslav Siriniok
 author: Vladyslav Siriniok
-email: siriniok@gmail.com
+email: vlad@siriniok.me
 twitter:
   username: siriniok
   card: summary
