Republish MIT Challenge

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,4 +1,4 @@
-# - name: MIT
-  # link: /learning/2018/09/01/mit-challenge.html
+- name: MIT
+  link: /learning/2018/09/01/mit-challenge.html
 - name: Blog
   link: /articles/
