Add Consulting page

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,5 +2,7 @@
   link: /learning/2018/09/01/mit-challenge/
 - name: Blog
   link: /articles/
+- name: Consulting
+  link: /consulting/
 - name: Subscribe
   link: "#subscribe"
