Fix the site url in the config

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ social:
     - https://github.com/siriniok
 description: >
   A blog on tech and science by Vladyslav Siriniok
-url: "http://siriniok.me"
+url: "https://siriniok.me"
 permalink: pretty
 twitter_username: siriniok
 github_username:  siriniok
