Add the Predictions page

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,6 +2,8 @@
   link: /articles/
 - name: Consulting
   link: /consulting/
+- name: Predictions
+  link: /predictions/
 - name: MIT
   link: /learning/2018/09/01/mit-challenge/
 - name: Subscribe
